--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.display {
+  font-family: 'Edu VIC WA NT Beginner', cursive;
+}
+
+.heading {
+  font-family: 'Lobster', cursive;
+}
